--- a/progetto_ltw/learnMap/learnMap.scss
+++ b/progetto_ltw/learnMap/learnMap.scss
@@ -1,15 +1,11 @@
-@charset "UTF-8";
 /** @format */
 body {
-  margin: 0;
-  padding: 0;
+	margin: 0;
+	padding: 0;
+	h1 {
+		font-size: 1rem;
+		padding: 10;
+	}
 }
-
-body h1 {
-  font-size: 1rem;
-  padding: 10;
-}
-
 /** (test)questo file scss è per creare il file css in modo semplice, uso l'estensione sass compile(vscode) 
 per compilarlo poi in un file css semplice che può essere usato da html **/
-/*# sourceMappingURL=learnMap.css.map */
