introtest almost done  and bootstrap js and css in assets !!

--- a/front/assets/css/home-made.css
+++ b/front/assets/css/home-made.css
@@ -1,5 +1,8 @@
 /** @format */
 
 .bg-blur {
-	background-color: rgba(0, 0, 0, 0.8);
+	background-color: rgba(255, 255, 255, 0.4);
+}
+.bg-more-blur {
+	background-color: rgba(255, 255, 255, 0.8);
 }
