--- a/front/assets/css/main.css
+++ b/front/assets/css/main.css
@@ -588,7 +588,7 @@ button,
 	text-align: right;
 	top: 2em;
 	width: 100%;
-	z-index: 10001;
+	z-index: 0;
 }
 
 #header .inner {
@@ -640,7 +640,7 @@ button,
 	text-decoration: none;
 	height: 4em;
 	width: 4em;
-	z-index: 10003;
+	z-index: 0;
 }
 
 #header a.navPanelToggle .fa {
@@ -706,7 +706,7 @@ button,
 	max-width: 80%;
 	width: 20em;
 	padding: 0.5em 1.25em;
-	z-index: 10010;
+	z-index: 0;
 }
 
 #navPanel.visible {
@@ -749,7 +749,7 @@ button,
 	right: 0;
 	text-align: right;
 	top: 0;
-	vertical-align: middle;
+	/* vertical-align: middle; */
 	width: 5em;
 }
 
@@ -796,7 +796,7 @@ button,
 
 #banner .inner {
 	position: relative;
-	z-index: 10005;
+	z-index: 0;
 }
 
 #banner h1 {
@@ -868,8 +868,8 @@ button,
 	border: none;
 }
 
-#banner .flex div:first-child {
-}
+/* #banner .flex div:first-child {
+} */
 
 #banner .flex div p {
 	margin: 0;
